# py-rkllm-runtime

./: .gitignore  .gitmodules  LICENSE  README.md  build.py  include  lib  pyproject.toml
.devcontainer/: devcontainer.json
examples/: main.py
include/: rkllm.h
scripts/: build-cffi.py
src/rkllm_runtime/: _rkllm.pyi  rkllm.py  utils.py
tests/: test_rkllm_param.py
